Fix item spacing

--- a/personal-website-frontend/src/styles/app.css
+++ b/personal-website-frontend/src/styles/app.css
@@ -54,5 +54,6 @@ table {
     overflow-x: hidden;
     background-color: var(--dark-color);
     display: grid;
-    grid-template-rows: 100vh 100vh 100vh 100vh 100vh;
+		align-items: center;
+    grid-template-rows: 100vh 100vh 100vh 150vh 100vh;
 }
